------------------------------------
	Version 2.3
------------------------------------

 MessageCounter 2.3.12 [Jul 2014]
 - [ADDED]		Widget for messages sent
 - [CHANGED]	Settings icon
 - [CHANGED]	Settings menu to actionbar
 - [CHANGED]	UI Tweaks
 - [ADDED]		Widget update broadcast when sending message
 
 MessageCounter 2.3.16 [Jul 2014]
 - [FIXED]		Minor bug Fixes for Xperia and HTC devices
 - [CHANGED]	Counter fragment is main frgment

 MessageCounter 2.3.20 [Aug 2014]
 - [FIXED]		Minor bug Fixes as reported
 - [FIXED]		Fixed cycle limit -1 in widget
 
 MessageCounter 2.3.24 [Oct 2014]
 - [FIXED]		Minor bug fixes as reported
 
 ------------------------------------
	Version 3.0 Talisman (Material Design)
 ------------------------------------
 MessageCounter 3.0.30 [Dec 2014]
  - [CHANGED]	Redesign Counter fragment 
  - [CHANGED]	Use CardView
  - [CHANGED]	Removed Chart Fragment as it is a bit buggy
  - [CHANGED]	Use Toolbar on applicable screens
  - [CHANGED]	basic material design 
  - [CHANGED]	Message Counter is enabled by default
  
 MessageCounter 3.0.32 [Dec 2014]
  - [CHANGED]	Removed Non Contact Messages option in settings
  - [FIXED]		Fix for NoSuchMethodError for getMinimumHeight
  
 MessageCounter 3.0.35 [Jan 2015]
  - [CHANGED]	Use toolbar in SettingsActivity
  
 MessageCounter 3.0.50 [Feb 2015]
  - [ADDED]		Support for Navigation Drawer
  - [CHANGED]	Bring back Chart Fragment on popular demand
  - [FIXED]		NPE when pressing hardware menu button on LG Devices
  - [CHANGED]	New color scheme for Chart
  - [CHANGED]	More Material Design updates
  - [REMOVED]	Animation for message summary
  
  MessageCounter 3.1.0 [Aug 2015]
  - [ADDED]		In-App Donations
  - [CHANGED]	About screen reorganization
  - [CHANGED]	Navigation Drawer updates
  - [CHANGED]	UI Updates
  
  MessageCounter 3.1.1 [Feb 2016]
  - [ADDED]		Messages sent this week
  - [CHANGED]	Navigation Drawer updates
  - [REMOVED]	Menu in toolbar moved to Navigation Drawer
  - [CHANGED]	UI Adjustments